[project]
name = "wallet-manipulator"
version = "0.1.0"
description = "A tool for low level work on a Bitcoin Core wallet file"
authors = [
    {name = "Ava Chow",email = "github@achow101.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
