[project]
name = "wallet-manipulator"
version = "0.1.0"
description = "A tool for low level work on a Bitcoin Core wallet file"
authors = [
    {name = "Ava Chow",email = "github@achow101.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography (>=45.0.2,<46.0.0)",
    "secp256k1 (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
